--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,3 +1,6 @@
+permissions:
+  contents: write
+
 name: Create Release
 
 on:
@@ -14,3 +17,5 @@ jobs:
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
