--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,5 +26,8 @@ jobs:
       - name: Install dependencies
         run: composer install --prefer-dist --no-progress --no-suggest
 
+      - name: Run PHP CS Fixer check
+        run: vendor/bin/php-cs-fixer fix --dry-run --diff
+        
       - name: Run Tests
         run: vendor/bin/phpunit
